--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,23 @@
 asgiref==3.8.1
+certifi==2024.12.14
+cffi==1.17.1
+charset-normalizer==3.4.1
+cryptography==44.0.0
 Django==4.2.17
+django-allauth==65.3.1
 django-appconf==1.0.6
 django-compressor==4.5.1
 gunicorn==23.0.0
+idna==3.10
+oauthlib==3.2.2
 packaging==24.2
+pillow==11.1.0
+pycparser==2.22
+PyJWT==2.10.1
 rcssmin==1.1.2
+requests==2.32.3
+requests-oauthlib==2.0.0
 rjsmin==1.2.2
 sqlparse==0.5.3
 typing_extensions==4.12.2
+urllib3==2.3.0
