--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Django==4.2.17
 django-allauth==65.3.1
 django-appconf==1.0.6
 django-compressor==4.5.1
+django-environ==0.12.0
 gunicorn==23.0.0
 idna==3.10
 oauthlib==3.2.2
