--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 amqp==5.3.1
+annotated-types==0.7.0
+anyio==4.9.0
+apify_client==1.10.0
+apify_shared==1.4.1
 asgiref==3.8.1
 billiard==4.2.1
 celery==5.4.0
@@ -10,19 +14,29 @@ click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
 cryptography==44.0.0
+distro==1.9.0
 Django==4.2.17
 django-allauth==65.6.0
 django-appconf==1.0.6
 django-compressor==4.5.1
 django-environ==0.12.0
+exceptiongroup==1.3.0
 gunicorn==23.0.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
+jiter==0.10.0
 kombu==5.4.2
+more-itertools==10.7.0
 oauthlib==3.2.2
+openai==1.86.0
 packaging==24.2
 pillow==11.1.0
 prompt_toolkit==3.0.50
 pycparser==2.22
+pydantic==2.11.6
+pydantic_core==2.33.2
 PyJWT==2.10.1
 python-dateutil==2.9.0.post0
 rcssmin==1.1.2
@@ -30,7 +44,10 @@ requests==2.32.3
 requests-oauthlib==2.0.0
 rjsmin==1.2.2
 six==1.17.0
+sniffio==1.3.1
 sqlparse==0.5.3
+tqdm==4.67.1
+typing-inspection==0.4.1
 typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.3.0
